[gd_scene load_steps=3 format=3 uid="uid://chd6mr5uxua70"]

[ext_resource type="Script" uid="uid://bcouckonsk5ov" path="res://modules/minigame/common/shared/minigame_overlay.gd" id="1_7qwu2"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7qwu2"]

[node name="MinigameOverlay" type="PanelContainer"]
offset_right = 111.0
offset_bottom = 120.0
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxEmpty_7qwu2")
script = ExtResource("1_7qwu2")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="Panels" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_constants/separation = 10
alignment = 1

[node name="ScorePanel" type="HBoxContainer" parent="MarginContainer/Panels"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="ScoreLabel" type="Label" parent="MarginContainer/Panels/ScorePanel"]
unique_name_in_owner = true
layout_mode = 2
text = "Score"

[node name="ScoreIcon" type="TextureRect" parent="MarginContainer/Panels/ScorePanel"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="ScoreValue" type="Label" parent="MarginContainer/Panels/ScorePanel"]
unique_name_in_owner = true
layout_mode = 2

[node name="CountdownPanel" type="HBoxContainer" parent="MarginContainer/Panels"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="CountdownLabel" type="Label" parent="MarginContainer/Panels/CountdownPanel"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="CountdownIcon" type="TextureRect" parent="MarginContainer/Panels/CountdownPanel"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="CountdownValue" type="Label" parent="MarginContainer/Panels/CountdownPanel"]
unique_name_in_owner = true
layout_mode = 2
